styles/modal.module.css
#article {
    position: fixed;
    width: 95vw;
    height: 95vh;
    top: 2.5vh;
    left: 2.5vw;
    border-radius: 20px;
    background-color: var(--background);
    box-shadow: 0 0 10px #111;
    overflow-x: hidden;
    overflow-y: scroll;
}

#articlecontent {
    width: 100%;
    height: 100%;
    font-size: 16px;
    text-align: left;
    margin: auto;
    margin-top: 50px;
}

#backdrop {
    position: fixed;
    width: 100vw;
    height: 100vh;
    top: 0px;
    left: 0px;
    backdrop-filter: blur(10px);
}

#close {
    position: fixed;
    bottom: 3vh;
    right: calc(3.5vh + 15px);
    font-size: 16px;
    color: var(--text-secondary);
    background-color: var(--accent-primary);
    box-shadow: 0 0 10px #111;
    border-radius: 100%;
    width: 50px;
    height: 50px;
    text-align: center;
}

#close:hover {
    cursor: pointer;
    background-color: var(--accent-primary-hover);
}

#close_icon {
    margin: auto;
    height: 100%;
}

.summarize {
    margin: auto;
    margin-bottom: 25px;
    margin-top: 25px;
    padding: 10px;
    width: fit-content;
    height: 50px;
    border-radius: 50px;
    box-shadow: 0 0 20px var(--summarize-shadow);
    background: var(--summary-gradient);
}

.summarize:hover {
    cursor: pointer;
    background: var(--summarize-hover);
}

.summary_text {
    font-size: 16px;
    font-weight: bold;
    background: white;
    background-clip: text;
    -webkit-text-fill-color: transparent;
}

.ai_header {
    text-align: center;
    margin-bottom: 25px;
    margin-top: 25px;
    background: var(--summary-gradient);
    background-clip: text;
    -webkit-text-fill-color: transparent;
}

.summary {
    width: 80%;
    max-width: 800px;
    min-width: 275px;
    margin: auto;
    margin-bottom: 25px;
    font-size: 16px;
    line-height: 22px;
}

